@startumlclassDiagram
             class Range {
                 <<record>>
                 -long start
                 -long end
                 +from(text: String)$ Range
                 +stream() LongStream
             }

             class GiftShopDatabase {
                 <<Funcional Pura>>
                 +from(rawRanges: String)$ List~Range~
                 +sumInvalidIds(ranges: List~Range~)$ long
                 -isTwiceRepeatedPattern(id: long)$ boolean
             }

             class Main {
                 +main(args: String[])$ void
             }

             GiftShopDatabase ..> Range : Transforma y Consume
             Main ..> GiftShopDatabase : Orquesta
@enduml